# mcp-grokipedia-tool

./: .gitignore  Dockerfile  Dockerfile.smithery  README.md  pyproject.toml  smithery.yaml
grokipedia_mcp/: __init__.py  __main__.py  server.py
