[project]
name = "grokipedia-mcp"
version = "0.2.2"
description = "MCP server for Grokipedia"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "grokipedia-api-sdk>=0.1.3",
  "mcp>=1.19.0",
  "click>=8.0.0",
  "uvicorn>=0.27.0",
  "starlette>=0.36.0",
]

[project.scripts]
grokipedia-mcp = "grokipedia_mcp.__main__:main"

[dependency-groups]
dev = ["mcp[cli]>=1.19.0"]

[tool.smithery]
server = "grokipedia_mcp.__main__.smithery_server"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["grokipedia_mcp"]
include = ["grokipedia_mcp/icon.png"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
